    * 0814 Agent versions can now be checked with "at least version X" parameters...
    * 0815 mysql_slave: New check for monitoring MySQL slave sync state
    * 0617 adva_fsp_if: new check to monitor interfaces of the ADVA FSP 3000 scalable optical transport solution
    * 0618 adva_fsp_current: new check for the power supply units of the ADVA FSP 3000 scalable optical transport solution
    * 0616 FIX: brocade.fan, brocade.power, brocade.temp: will now only discover services which are not marked as absent
    * 0992 FIX: zfs_arc_cache: returns OK even if values of arc meta are missing...

    Multisite:
    * 0934 FIX: Logwatch messages with class unknown ( 'u' ) now displayed as WARN...

    WATO:
    * 0987 New button for updating DNS cache...
    * 0813 FIX: LDAP: Improved slightly missleading logging of LDAP sync actions...

    Reporting & Availability:
    * 0985 Availability: display phases of freqent state changes as "chaos"...

    Event Console:
    * 0816 States of events can now be set by patterns...


1.2.5i3:
    Core & Setup:
    * 0884 New options --oid and --extraoid for cmk --snmpwalk...
    * 0785 FIX: Availability: fixed memory leak in table statehist...
    * 0903 FIX: availability: fixed bug causing the availability feature not considering timeperiod transitions
    * 0888 FIX: Fix SNMP inventory check in simulation mode

    Checks & Agents:
    * 0149 cisco_secure: New check for Port Security on Cisco swichtes
    * 0751 New localcheck for Linux that makes sure that filesystems in /etc/fstab are mounted...
    * 0783 enterasys_lsnat: new check monitoring the current LSNAT bindings
    * 0601 printer_alerts: check can now display a textual representation of the alert code...
            NOTE: Please refer to the migration notes!
    * 0799 ibm_svc_systemstats.cpu_util: New check for CPU Utilization of an IBM SVC / V7000 device in total